# Financial-Manager

./: .gitignore  README.md  schema.txt
backend/: -- SQLite.sql  README.md  config.yaml  config_example.yaml  financial_manager.db  main.py  pyproject.toml
backend/app/: __init__.py  db.py  deps.py  main.py
backend/app/core/: config.py  crypto.py  security.py
backend/app/models/: __init__.py  company.py  customer.py  department.py  purchase.py  sale.py  supplier.py  type.py  user.py  user_company.py  user_customer.py  user_supplier.py
backend/app/routers/: auth.py  companies.py  customers.py  departments.py  purchases.py  sales.py  statistics.py  suppliers.py  types.py
backend/app/schemas/: company.py  customer.py  department.py  purchase.py  sale.py  supplier.py  type.py  user.py
backend/app/services/: image_uploader.py
backend/app/utils/: init_keys.py  manage_db.py  upload_to_qiniu.py
backend/keys/: private_key.pem  public_key.pem
backend/tests/: conftest.py  test_auth.py  test_companies.py  test_departments.py  test_purchases.py  test_sales.py  test_token_expiry.py  test_types.py
docs/: ERD.md
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AppShell.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Business.vue  Customers.vue  Dashboard.vue  Invoices.vue  Login.vue  Purchases.vue  Register.vue  Sales.vue  Settings.vue  Statistics.vue
