[project]
name = "financial-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.112",
	"uvicorn[standard]>=0.30",
	"SQLAlchemy>=2.0",
	"pydantic[email]>=2.8",
	"python-jose[cryptography]>=3.3",
	"python-multipart>=0.0.9",
	"alembic>=1.13",
	"httpx>=0.27",
	"pytest>=8.0",
	"PyYAML>=6.0",
	"pwdlib[argon2]>=0.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"
